New decompiled sources, using custom tools!